[tool.poetry]
name = "try-pyrogram"
version = "0.1.0"
description = ""
authors = ["Dmitriy Suchkov <Account.log@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Pyrogram = "^1.2.9"
tgintegration = "^1.1.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
python-dotenv = "^0.19.0"
pydantic = "^1.8.2"
aiogram = "^2.15"
more-itertools = "^8.10.0"
loguru = "^0.5.3"
TgCrypto = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
